# phycus

./: .factorypath  .gitignore  .pre-commit-config.yaml  Dockerfile  HFCuS_new.xsd  Makefile  README.md  bash-start-java-tomcat.sh  curation-swagger-spec.yaml  docker-compose.yml  generate-from-swagger.sh  main.py  pom.xml  pyproject.toml  swagger-config.json
.circleci/: config.yml
.github/workflows/: build.yml
client/R/: README.md
client/java/: README.md  pom.xml
client/java/freq-client/: .gitignore  README.md  pom.xml
client/java/freq-tools/: .gitignore  pom.xml
client/java/freq-tools-gui/: nbactions.xml  pom.xml
client/javaGui/: README.md  pom.xml
client/javaGui/freq-client/: .gitignore  pom.xml
client/javaGui/freq-tools/: pom.xml
client/perl/: .gitignore  Cohort-client.pl  HFCuS-client.pl  Makefile  Makefile.PL  Population-client.pl  README.md
client/perl/data/: US_CAU.freqs
client/python/: .gitignore  Makefile  README.md  config.json  hfcus-extract  hfcus-import  hfcus-import.py  setup.py
client/testDataFiles/: README.md  US_CAU.csv  US_CAU_Errors.csv  US_CAU_Errors.phycus  US_CAU_Errors.txt  US_CAU_Errors_2019-06-11_17-34-56.txt  demo_OTH.csv  demo_OTH.txt  demo_OTH_test.phycus  demo_OTH_test.txt  demo_PHYCUS_HFs.csv  demo_PHYCUS_HFs.phycus  phycusHeader.txt  prefsVariables.txt  proto_hap_data.csv  proto_hap_data.phycus  proto_hap_data_over_limit.csv  proto_hap_data_over_limit.phycus  short_proto_hap_data.phycus
client/testDataFiles/ION/: GRID-Issuing-Organizations-Data-File.xml  GRID-Issuing-Organizations.xlsx  GRID-Issuing-Organizations_XML-Schema-v3.xsd
client/testDataFiles/Java/: phycusHeader.txt  (+1 more)
db/: README.md  docker-compose.yml  mysql_create_database.sql  mysql_create_tables.sql
docs/: BMDW_quality_metrics.xlsx  HF-Governance.docx  HaplotypeFrequency Creation Service.docx  HaplotypeFrequency Curation Service.docx  README.md  UserGuide  comment.xml  index.html
docs/archive/: 201610_HF-Governance.pptx  Thumbs.db
docs/prototypes/: HFCuS.xml  HFCuS.xsd
hfx/: README.md  config.json  hfx.example.json  hfx.metadata.json  hfx.schema.json  hfx_afnd.json  hfx_old.json  mkhfx.json  mkhfx.py
hfx/json/: README.md  config.json  config_afnd.json  hfx.json  hfx.metadata.json  hfx.schema.json  mkhfx.py  requirements.txt
hfx/xml/: README.md  config.txt  csv2xml.pl  haplotypes.csv  hfx_schema.xsd  output.xml  schema.xsd
lambda_functions/phycus_sum/: Makefile  README.md  lambda_function.py  requirements.txt
phycus/: __init__.py  cli.py  metadata_parser.py  site_generator.py
phycus/templates/: index.html
shiny-app/api/: DESCRIPTION  NAMESPACE  README.md
shiny-app/app/: _auth0.yml  server.R  ui.R
shiny-app/data/: MUSLEM.freqs
submission/: HEGL_AFA.hfx  cau.hfx-metadata.json  invalid-cau.hfx-metadata.json  test2.hfx
(+389 files in other folders)
