[project]
name = "phycus"
version = "0.0.1"
description = "Public Haplotype Frequency Curation Service - Publish and index HFX files with searchable static table"
authors = [{ name = "NMDP Bioinformatics", email = "bioinformatics@nmdp.org" }]
readme = "README.md"
requires-python = ">=3.13"
license = "LGPL-3.0-only"
dependencies = [
    "jinja2>=3.0.0",
    "hfx-tools @ git+https://github.com/mmaiers-nmdp/hfx-tools.git@mvp",
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[tool.setuptools]
packages = ["phycus"]

[project.scripts]
phycus = "phycus.cli:main"

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.11"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]  # Line too long - relax this check

[tool.bumpversion]
current_version = "0.0.1"
commit = true

[[tool.bumpversion.files]]
filename = "main.py"

[build-systm]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"